# social-media-datawarehouse

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
notebooks/: ETL_script.ipynb  ProjectDefinition.md
notebooks/data/: events.csv  payments_data.csv  posts.csv
notebooks/data/user_report.csv/: .part-00000-57d03ec7-8c8a-4870-86c6-fcb7dc867262-c000.csv.crc  part-00000-57d03ec7-8c8a-4870-86c6-fcb7dc867262-c000.csv
