[tool.poetry]
name = "social-media-analysis"
version = "0.1.0"
description = ""
authors = ["Mamad <mkajbaf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
jupyter = "~1.0.0"
pyspark = "~3.3.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter", "toml"], version = "^22.8.0"}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
